--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -20,6 +20,13 @@ jobs:
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
+        with:
+          languages: javascript, python # adjust as needed
+          config-file: .github/codeql/codeql-config.yml
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
